--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@babel/core": "^7.8.3",
-    "@babel/node": "^7.8.3",
-    "@babel/preset-env": "^7.8.3",
+    "@babel/core": "^7.8.7",
+    "@babel/helper-compilation-targets": "^7.12.5",
+    "@babel/node": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "nodemon": "^2.0.2"
+    "mongodb": "^3.6.3",
+    "nodemon": "^2.0.7"
   },
   "devDependencies": {
     "eslint": "^6.8.0",
-    "eslint-config-airbnb": "^18.0.1",
+    "eslint-config-airbnb": "^18.2.1",
     "eslint-config-import": "^0.13.0"
   }
 }
