--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "express-list-endpoints": "^5.0.0",
     "mongodb": "^3.6.3",
+    "mongoose": "^5.11.15",
     "nodemon": "^2.0.7"
   },
   "devDependencies": {
